--- a/Automation/Automation.App/Components/Inputs/TextBoxModal.xaml
+++ b/Automation/Automation.App/Components/Inputs/TextBoxModal.xaml
@@ -24,7 +24,7 @@
             HorizontalAlignment="Right">
             <Button Margin="2,0" Command="{Binding ParentLayout.HideCommand}">
                 <StackPanel Orientation="Horizontal">
-                    <fonts:Icon Text="{x:Static fonts:IconFont.Xmark}" />
+                    <fonts:Icon Text="{x:Static fonts:IconFont.X}" />
                     <TextBlock Margin="4,0,0,0">Cancel</TextBlock>
                 </StackPanel>
             </Button>
