--- a/Automation/Automation.App/Views/WorkPages/Tasks/Instances/TaskProgressionModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/Instances/TaskProgressionModal.xaml
@@ -32,19 +32,19 @@
                                     <Style TargetType="{x:Type fonts:Icon}" BasedOn="{StaticResource {x:Type fonts:Icon}}">
                                         <Style.Triggers>
                                             <DataTrigger Binding="{Binding Type}" Value="Info">
-                                                <Setter Property="Text" Value="{x:Static fonts:IconFont.CircleInfo}" />
+                                                <Setter Property="Text" Value="{x:Static fonts:IconFont.Info}" />
                                                 <Setter Property="Foreground" Value="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}" />
                                             </DataTrigger>
                                             <DataTrigger Binding="{Binding Type}" Value="Warning">
-                                                <Setter Property="Text" Value="{x:Static fonts:IconFont.CircleExclamation}" />
+                                                <Setter Property="Text" Value="{x:Static fonts:IconFont.WarningCircle}" />
                                                 <Setter Property="Foreground" Value="{DynamicResource {x:Static adonisUi:Brushes.AlertBrush}}" />
                                             </DataTrigger>
                                             <DataTrigger Binding="{Binding Type}" Value="Error">
-                                                <Setter Property="Text" Value="{x:Static fonts:IconFont.CircleExclamation}" />
+                                                <Setter Property="Text" Value="{x:Static fonts:IconFont.WarningCircle}" />
                                                 <Setter Property="Foreground" Value="{DynamicResource {x:Static adonisUi:Brushes.ErrorBrush}}" />
                                             </DataTrigger>
                                             <DataTrigger Binding="{Binding Type}" Value="Sucess">
-                                                <Setter Property="Text" Value="{x:Static fonts:IconFont.CircleCheck}" />
+                                                <Setter Property="Text" Value="{x:Static fonts:IconFont.CheckCircle}" />
                                                 <Setter Property="Foreground" Value="{DynamicResource {x:Static adonisUi:Brushes.SuccessBrush}}" />
                                             </DataTrigger>
                                         </Style.Triggers>
