--- a/Automation/Automation.App/Views/WorkPages/Tasks/TaskEditModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/TaskEditModal.xaml
@@ -46,7 +46,7 @@
                             </Style>
                         </Button.Style>
                         <StackPanel Orientation="Horizontal">
-                            <fonts:Icon Text="{x:Static fonts:IconFont.LinkSlash}" />
+                            <fonts:Icon Text="{x:Static fonts:IconFont.LinkBreak}" />
                             <TextBlock Margin="4,0,0,0">Remove</TextBlock>
                         </StackPanel>
                     </Button>
@@ -136,7 +136,7 @@
                 Margin="0,2,0,0">
                 <Button Margin="2,0" Command="{Binding ParentLayout.HideCommand}">
                     <StackPanel Orientation="Horizontal">
-                        <fonts:Icon Text="{x:Static fonts:IconFont.Xmark}" />
+                        <fonts:Icon Text="{x:Static fonts:IconFont.X}" />
                         <TextBlock Margin="4,0,0,0">Cancel</TextBlock>
                     </StackPanel>
                 </Button>
