--- a/Automation/Automation.App/Views/WorkPages/Tasks/TaskEditModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/TaskEditModal.xaml
@@ -8,7 +8,7 @@
     xmlns:components="clr-namespace:Automation.App.Views.WorkPages.Components"
     xmlns:packageComponents="clr-namespace:Automation.App.Views.PackagesPages.Components"
     xmlns:inputs="clr-namespace:Automation.App.Components.Inputs"
-    xmlns:models="clr-namespace:Automation.Dal.Models;assembly=Automation.App.Shared"
+    xmlns:models="clr-namespace:Automation.Models;assembly=Automation.App.Shared"
     xmlns:jouffluInputs="clr-namespace:Joufflu.Inputs;assembly=Joufflu.Inputs"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
