--- a/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedSelector.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedSelector.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Scopes.Components"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:models="clr-namespace:Automation.Models;assembly=Automation.App.Shared"
+    xmlns:models="clr-namespace:Automation.Models.Work;assembly=Automation.App.Shared"
     x:Name="ContainerElement"
     mc:Ignorable="d">
     <ListBox
