More complexe schema properties

--- a/Automation/Automation.App/Components/Schema/SchemaEdit.xaml
+++ b/Automation/Automation.App/Components/Schema/SchemaEdit.xaml
@@ -71,7 +71,7 @@
                                         </MultiDataTrigger>
                                     </HierarchicalDataTemplate.Triggers>
                                 </HierarchicalDataTemplate>
-                                <DataTemplate DataType="{x:Type schema:SchemaProperty}">
+                                <DataTemplate DataType="{x:Type schema:SchemaValueProperty}">
                                     <local:SchemaItem
                                         x:Name="Item"
                                         dnd:DragBehavior.Handler="{Binding DataContext.DragHandler, RelativeSource={RelativeSource AncestorType={x:Type TreeView}}, Mode=OneTime}"
