--- a/Automation/Automation.App/Views/WorkPages/Workflows/WorkflowPage.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/WorkflowPage.xaml
@@ -8,11 +8,10 @@
     xmlns:editor="clr-namespace:Automation.App.Views.WorkPages.Workflows.Editor"
     xmlns:components="clr-namespace:Automation.App.Views.WorkPages.Components"
     xmlns:instances="clr-namespace:Automation.App.Views.WorkPages.Tasks.Instances"
+    xmlns:schema="clr-namespace:Automation.App.Components.Schema"
     xmlns:tasks="clr-namespace:Automation.App.Views.WorkPages.Tasks"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
-    mc:Ignorable="d"
-    d:DesignHeight="450"
-    d:DesignWidth="800">
+    mc:Ignorable="d">
     <Grid>
         <TabControl DataContext="{Binding RelativeSource={RelativeSource AncestorType=local:WorkflowPage}}">
             <TabItem>
@@ -39,6 +38,16 @@
                         <TextBlock Margin="4,0,0,0">Executions history</TextBlock>
                     </StackPanel>
                 </TabItem.Header>
+            </TabItem>
+            <TabItem>
+                <TabItem.Header>
+                    <StackPanel Orientation="Horizontal">
+                        <fonts:Icon Text="{x:Static fonts:IconFont.TreeView}" />
+                        <TextBlock Margin="4,0,0,0">Schema</TextBlock>
+                    </StackPanel>
+                </TabItem.Header>
+
+                <schema:SchemaEdit Root="{Binding Schema}" />
             </TabItem>
         </TabControl>
         <Button
