--- a/Automation/Automation.App/Components/Schema/IconDataType.xaml
+++ b/Automation/Automation.App/Components/Schema/IconDataType.xaml
@@ -1,21 +1,15 @@
-﻿<ResourceDictionary
+﻿<UserControl
+    x:Class="Automation.App.Components.Schema.IconDataType"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:font="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
-    xmlns:local="clr-namespace:Automation.App.Components.Schema">
-    <Style TargetType="{x:Type local:IconDataType}">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:IconDataType}">
-                    <StackPanel DataContext="{Binding RelativeSource={RelativeSource TemplatedParent}}" Orientation="Horizontal">
-                        <font:Icon Text="{Binding Icon}" ToolTip="{Binding Type}" />
-                        <TextBlock
-                            Margin="4,0,0,0"
-                            VerticalAlignment="Center"
-                            Text="{Binding Type}" />
-                    </StackPanel>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-</ResourceDictionary>
+    xmlns:local="clr-namespace:Automation.App.Components.Schema"
+    x:Name="ContainerElement">
+    <StackPanel DataContext="{Binding ElementName=ContainerElement}" Orientation="Horizontal">
+        <font:Icon Text="{Binding Icon}" ToolTip="{Binding Type}" />
+        <TextBlock
+            Margin="4,0,0,0"
+            VerticalAlignment="Center"
+            Text="{Binding Type}" />
+    </StackPanel>
+</UserControl>
