--- a/Automation/Automation.App/Components/Schema/SchemaEdit.xaml
+++ b/Automation/Automation.App/Components/Schema/SchemaEdit.xaml
@@ -7,7 +7,7 @@
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:dnd="clr-namespace:Joufflu.Data.DnD;assembly=Joufflu.Data"
     xmlns:extensions="clr-namespace:Joufflu.Shared.Extensions;assembly=Joufflu.Shared"
-    xmlns:font="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
+    xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     xmlns:local="clr-namespace:Automation.App.Components.Schema"
     xmlns:schema="clr-namespace:Automation.Models.Schema;assembly=Automation.App.Shared"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
