Use simple NJsonSchema for connector schema

--- a/Automation/Automation.App/Views/WorkPages/Tasks/TaskPage.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/TaskPage.xaml
@@ -7,7 +7,7 @@
     xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Tasks"
     xmlns:components="clr-namespace:Automation.App.Views.WorkPages.Components"
     xmlns:instances="clr-namespace:Automation.App.Views.WorkPages.Tasks.Instances"
-    xmlns:schema="clr-namespace:Automation.App.Components.Schema"
+    xmlns:schema="clr-namespace:Automation.App.Views.WorkPages.Components.Schema"
     xmlns:data="clr-namespace:Joufflu.Data;assembly=Joufflu.Data"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
@@ -40,7 +40,7 @@
                         </StackPanel>
                     </TabItem.Header>
 
-                    <schema:SchemaEdit Root="{Binding Schema}" />
+                    <schema:SchemaEdit Task="{Binding Task}" IsReadOnly="True" />
                 </TabItem>
             </TabControl>
 
